clusters/constellation/apps/actualbudget/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actualbudget
  namespace: actualbudget
  labels:
    app: actualbudget
spec:
  replicas: 1
  selector:
    matchLabels:
      app: actualbudget
  template:
    metadata:
      labels:
        app: actualbudget
    spec:
      securityContext:
        fsGroup: 9999
      containers:
      - name: actualbudget
        image: actualbudget/actual-server:25.2.0
        ports:
        - containerPort: 8080
        securityContext:
          runAsNonRoot: true
          runAsUser: 9999
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: actualbudget
